--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Final Project on Web Development - JavaScript project",
   "main": "main.js",
   "scripts": {
-    "test": "test",
-    "compile": "sass --watch src/styles/scss/main.scss:src/styles/dist/main.css"
+    "test": "jest",
+    "compile": "sass --watch src/styles/scss/main.scss:src/styles/dist/main.css",
+    "build": "sass src/styles/scss/main.scss:src/styles/dist/main.css --style=compressed",
+    "lint:js": "eslint src/js",
+    "lint:scss": "stylelint \"src/styles/scss/**/*.scss\"",
+    "lint": "npm run lint:js && npm run lint:scss",
+    "format": "prettier --write \"src/**/*.{js,scss}\""
   },
   "repository": {
     "type": "git",
@@ -23,6 +28,16 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "sass": "^1.81.0"
+    "sass": "^1.81.0",
+    "stylelint-config-standard-scss": "^13.1.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
+    "jest": "^29.0.0",
+    "prettier": "^3.0.0",
+    "stylelint": "^16.11.0",
+    "stylelint-scss": "^6.10.0"
   }
 }
