--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "stylelint-config-standard-scss": "^13.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.15.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
     "jest": "^29.0.0",
