fixed version of stylelint

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "sass src/styles/scss/main.scss:src/styles/dist/main.css --style=compressed",
     "lint:js": "eslint src/js",
     "lint:scss": "stylelint \"src/styles/scss/**/*.scss\"",
-    "lint": "npm run lint:js && npm run lint:scss",
+    "lint": "npm run lint:js && npm run lint:scss && echo \"Linting is done!\"",
     "format": "prettier --write \"src/**/*.{js,scss}\""
   },
   "repository": {
