--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,1 +1,19 @@
-{ "extends": "stylelint-config-standard", "rules": { "indentation": 2 } }
+{
+  "extends": "stylelint-config-standard-scss",
+  "rules": {
+    "import-notation": null,
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": [
+          "import",
+          "include",
+          "mixin",
+          "use", 
+          "forward"
+        ]
+      }
+    ],
+    "scss/at-rule-no-unknown": null
+  }
+}
